# CostaWay_CostaRicanTransfers

./: AGENTS.md  railway.json
backend/: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  bookings.py  payments.py  quote_requests.py  routes.py  webhooks.py
backend/app/auth/: __init__.py  jwt_auth.py
backend/app/models/: __init__.py  admin_user.py  booking.py  quote_request.py  route.py
backend/app/schemas/: __init__.py  admin_user.py  booking.py  quote_request.py  route.py
backend/app/services/: __init__.py  email_service.py  stripe_service.py
backend/tests/: test_main.py
frontend/: .env.example  README.md  eslint.config.js  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/components/admin/: AdminLoginForm.tsx  AdminSidebar.tsx
frontend/src/components/booking/: BookingForm.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  HeroSection.tsx  MobileNav.tsx  TrustSection.tsx
frontend/src/components/quote/: QuoteRequestForm.tsx
frontend/src/components/routes/: PopularRoutes.tsx  RouteCatalog.tsx  RouteDetail.tsx
frontend/src/components/ui/: AnimatedSection.tsx
frontend/src/i18n/: request.ts
frontend/src/lib/: api.ts
frontend/src/messages/: en.json  es.json
frontend/src/types/: index.ts
(+10 files in other folders)
